fix mobile horizontal scroll

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://countingsheepproject.com
 Author: Coben Yap
 Author URI: https://www.linkedin.com/in/cobenyap/
 Description: A custom theme built from scratch specifically for Counting Sheep Project
-Version: 1.4
+Version: 1.5.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: countingsheep
@@ -154,6 +154,13 @@ Text Domain: countingsheep
         /* keep fixed on desktop only */
     }
 }
+
+html,
+body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 
 body {
     background: var(--theme-gradient);
